# viadkim

./: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md
examples/: dkimsign.rs  dkimverify.rs
src/: body_hash.rs  canon.rs  canonicalize.rs  dqp.rs  header.rs  lib.rs  message_hash.rs  parse.rs  quoted_printable.rs  record.rs  signature.rs  tag_list.rs  util.rs
src/crypto/: ed25519.rs  hash.rs  mod.rs  rsa.rs
src/signature/: format.rs  mod.rs  names.rs
src/signer/: format.rs  key_store.rs  mod.rs  request.rs  sign.rs
src/verifier/: header.rs  mod.rs  query.rs  verify.rs
src/verifier/lookup/: hickory_resolver.rs  mod.rs  trust_dns_resolver.rs
tests/: basic.rs  copied_headers.rs  live.rs  low_level.rs  rfc8301.rs  rfc_appendix_a.rs  sign.rs  verify.rs
tests/common/: mod.rs
tests/keys/: brisbane_private.pem  brisbane_rsa.pem  ed25519.pem  ed25519pub.pem  rsa1024.pem  rsa1024pub.pem  rsa1pub.pem  rsa2048.pem  rsa512.pem  rsa512pub.pem
