[package]
name = "viadkim"
version = "0.0.4"
edition = "2021"
rust-version = "1.65.0"
description = "Implementation of the DomainKeys Identified Mail (DKIM) specification"
license = "GPL-3.0-or-later"
categories = ["cryptography", "email"]
keywords = ["dkim", "email", "smtp"]
repository = "https://gitlab.com/glts/viadkim"
exclude = ["/.gitignore", "/.gitlab-ci.yml"]

[dependencies]
base64ct = { version = "1.6.0", features = ["alloc"] }
bstr = { version = "1.5.0", default-features = false, features = ["std"] }
digest = "0.10.7"
ed25519-dalek = { version = "2.0.0-rc.3", features = ["pkcs8"] }
idna = "0.4.0"
pkcs8 = { version = "0.10.2", features = ["pem"] }
rsa = "0.9.2"
sha1 = { version = "0.10.5", features = ["oid"], optional = true }
sha2 = { version = "0.10.7", features = ["oid"] }
tokio = { version = "1.28.2", features = ["fs", "macros", "rt", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.37"
trust-dns-resolver = { version = "0.23.0-alpha.4", optional = true }

[dev-dependencies]
tokio = { version = "1.28.2", features = ["io-std", "io-util", "test-util"] }
tracing-subscriber = "0.3.17"

[features]
pre-rfc8301 = ["dep:sha1"]

[[test]]
name = "live"
required-features = ["trust-dns-resolver"]

[[example]]
name = "dkimverify"
required-features = ["trust-dns-resolver"]

[package.metadata.docs.rs]
features = ["trust-dns-resolver"]
