[package]
name = "viadkim"
version = "0.1.0"
edition = "2021"
rust-version = "1.67.0"
description = "Implementation of the DomainKeys Identified Mail (DKIM) specification"
license = "GPL-3.0-or-later"
categories = ["cryptography", "email"]
keywords = ["dkim", "email", "smtp"]
repository = "https://gitlab.com/glts/viadkim"
exclude = ["/.gitignore", "/.gitlab-ci.yml"]

[dependencies]
base64ct = { version = "1.6.0", features = ["alloc"] }
digest = "0.10.7"
ed25519-dalek = { version = "2.0.0", features = ["pkcs8"] }
idna = "0.4.0"
pkcs8 = { version = "0.10.2", features = ["pem"] }
rsa = { version = "0.9.6", default-features = false, features=["std"] }
sha1 = { version = "0.10.6", features = ["oid"], optional = true }
sha2 = { version = "0.10.8", features = ["oid"] }
tokio = { version = "1.33.0", features = ["rt", "time"] ,default-features = false}
tracing = "0.1.40"
getrandom = { version = "0.2", features = ["custom"] }

[dev-dependencies]
tokio = { version = "1.33.0", features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread", "test-util"] }
tracing-subscriber = "0.3.17"

[features]
# Reverts cryptographic algorithm and key usage to before RFC 8301.
pre-rfc8301 = ["dep:sha1"]

[[test]]
name = "live"
required-features = ["hickory-resolver"]

[[example]]
name = "dkimverify"
required-features = ["hickory-resolver"]

[package.metadata.docs.rs]
features = ["hickory-resolver"]
